assets/all.css
body {
	margin: 0;
	padding: 0;
	line-height: 1.5;
	font-size: 80%;
}

body, h1, h2, h3, h4, h5, h6 {
	font-family: Helvetica, Arial, sans-serif;
}

h1 {
	font-size: 200%;
	font-weight: normal;
	line-height: 1;
}

h1 span {
	font-size: 50%;
	font-weight: bold;
	display: block;
	color: gray;
}

h2 {
	font-size: 100%;
	margin-bottom: 0;
}

h2 + p {
	margin-top: 0;
}

form {
	margin: 0 auto;
	padding: 0;
}

#errors {
	border: 1px solid red;
	padding: 1ex;
	margin: 1ex 0;
	width: 40em;
}

#errors ul {
	margin: 0;
	padding: 0;
}

#errors li {
	margin: 0 0 0 1em;
	padding: 0;
}

ol.pagination {
	margin-left: 0;
	margin-right: 0;
	padding: 0;
	text-align: center;
	list-style: none;
}

ol.pagination li {
	display: inline;
	padding: 0 0.5ex;
}

/*- Tabular Data -*/

table.data {
	border-collapse: collapse;
	margin: 1em auto;
	text-align: center;
	width: 100%;
}

table.data th, table.data td {
	border-bottom: 1px solid silver;
	padding: 0.125ex 0.5ex;
}

table.data th {
	background: black url(images/shadow.png) bottom left repeat-x;
	color: orange;
	padding-bottom: 0.5ex;
}

table.data thead th {
	border: none;
}

table.data thead th + th {
	border-left: 1px solid white;
}

table.data tfoot th {
	text-align: right;
}

table.data tfoot th, table.data tfoot td {
	border-bottom: none;
}

th, td {
	text-align: left;
	vertical-align: top;
}

caption {
	text-align: center;
	margin: 1ex auto;
	caption-side: bottom;
}

th {
	white-space: nowrap;
}

.numeric, .currency {
	text-align: right;
}

.licence {
	border: 1px solid silver;
	border-bottom-width: 2px;
	border-right-width: 2px;
	margin: 1em 3em;
	padding: 0 1em;
	background-color: #FCFFF0;
}

